--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <h2>Press "Arrowleft"and "Aroowright" to move the paddle ,and "Arrowup" to shot the ball.</h2>
 <canvas id="idcan" width="800" height="600"></canvas>
 <script> 
-	alert('I am so sorry, C.\nI lacked enough time and necessary skills ,persistence to finish the task, consequently having to submit this terrible ball and ugly paddle with even no bricks.')
+	alert('I am so sorry, C.\nI lacked enough time ，necessary skills and persistence to finish the task, consequently having to submit this terrible ball and ugly paddle with even no bricks.')
 
 	var log = console.log.bind(console)
 	var canvas = document.querySelector("#idcan")
